<resources>
    <string name="app_name">ProjectFinal</string>
    <string name="mapbox_access_token">sk.eyJ1IjoiZGluaHBoaWxvbmciLCJhIjoiY2x3eXZpNXo1MDB6cTJrcXpoMGYzcDF3diJ9.T4JL64Hf1wPpy17lyqUqVg</string>
    <string name="todo">TODO</string>
    <string name="splash">Splash</string>
    <string name="login">Login</string>
    <string name="txt_name_acc">Enter your full name</string>
    <string name="txt_email">Email or phone number</string>
    <string name="txt_pass">Password.......</string>
    <string name="txtconfirmpass">Confirm password</string>
    <string name="txt_haveAcount">Alreadly have an account ?</string>
    <string name="txt_DontAcount">Don’t have an account ?</string>
    <string name="txt_sign_in">Sign In</string>
    <string name="txt_sign_up">Sign Up</string>
    <string name="txt_remember">Remember Me</string>
    <string name="txt_name">ĐINH PHI LONG</string>
    <string name="txt_greeting">Chào bạn, tôi có thể giúp gì cho bạn ? </string>
    <string name="txt_alarm">Chào bạn,bạn muốn đặt báo thức lúc nào ? </string>
    <string name="txt_music">Chào bạn,bạn muốn nghe gì ? </string>
    <string name="txt_medica">Chào bạn, bạn cần thông tin về loại bệnh gì ? </string>
    <string name="txt_request">1 km bằng nhiêu m ? </string>
    <string name="txt_call">bạn muốn gọi điện cho ai vậy ?\n</string>
    <string name="txt_disease">THÔNG TIN THUỐC</string>
    <string name="txt_feedback">1k = 1000m\n</string>
    <string name="txt_date_of_birth">Date Of Birth</string>
    <string name="txt_info">Xem thông tin tài khoản</string>
    <string name="txt_log_out">LOG OUT</string>
    <string name="song">Anh yeu em nhieu lam</string>
    <string name="txt_song">Anh nho em nhieu lam</string>
    <string name="txt_close_appp">Do you want to exit</string>
    <string name="txt_ok">Ok</string>
    <string name="txt_don_t">Don\'t</string>
    <string name="txt_benh_vien_108">Thành lập từ 1-4-1951, với một phân đội được tổ chức nhỏ gọn, trang bị khiêm tốn, điều kiện kỹ thuật còn khó khăn, trải qua hơn 67 năm xây dựng, chiến đấu và trưởng thành, Bệnh viện TƯQĐ 108 đã phát triển lớn mạnh trở thành bệnh viện đa khoa, chuyên khoa sâu, tuyến cuối của ngành Quân Y.</string>
    <string name="benh_vien_108">Benh Vien 108</string>
    <string name="txt_medicalRecord">THÔNG TIN BỆNH ÁN</string>
</resources>