<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:background="@color/white"
   android:orientation="vertical"
    android:layout_height="match_parent">


    <TextView
        android:layout_width="300dp"
        android:padding="10dp"
        android:background="@color/gray_300"
        android:text="@string/txt_close_appp"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_height="80dp"/>
    <TableRow
        android:layout_width="match_parent"
        android:padding="10dp"
        android:background="@color/gray_300"
        android:layout_height="wrap_content">
        <Button
            android:layout_marginEnd="10dp"
            android:id="@+id/bt_ok"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/txt_ok"
            android:backgroundTint="@color/gray"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"/>
        <Button
            android:layout_marginEnd="5dp"
            android:id="@+id/bt_dont"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/txt_don_t"
            android:backgroundTint="@color/blue_300"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"/>
    </TableRow>

</LinearLayout>